@@ -366,27 +366,27 @@ static void PrintDataObj(LPDATAOBJECT pDataObj)
 STDMETHODIMP CShellExt::Initialize(LPCITEMIDLIST pIDFolder, LPDATAOBJECT pDataObj, HKEY hRegKey)
 {
 #ifdef DoDBGTrace
-  TCHAR Path[4096]={0};
-  if (pIDFolder)
-    SHGetPathFromIDList(pIDFolder,Path);
-  TCHAR FileClass[4096]={0};
-  if(hRegKey)
-    GetRegStr(hRegKey,0,L"",FileClass,4096);
-  TCHAR File[4096]={0};
-  if(pDataObj)
-  {
-    FORMATETC fe = {CF_HDROP, NULL, DVASPECT_CONTENT, -1, TYMED_HGLOBAL};
-    STGMEDIUM stm;
-    if (SUCCEEDED(pDataObj->GetData(&fe,&stm)))
-    {
-      if(DragQueryFile((HDROP)stm.hGlobal,(UINT)-1,NULL,0)==1)
-        DragQueryFile((HDROP)stm.hGlobal,0,File,4096-1);
-      ReleaseStgMedium(&stm);
-    }
-  }
-  DBGTrace3("CShellExt::Initialize(%s,%s,%s)",Path,File,FileClass);
-  if(pDataObj)
-    PrintDataObj(pDataObj);
+//  TCHAR Path[4096]={0};
+//  if (pIDFolder)
+//    SHGetPathFromIDList(pIDFolder,Path);
+//  TCHAR FileClass[4096]={0};
+//  if(hRegKey)
+//    GetRegStr(hRegKey,0,L"",FileClass,4096);
+//  TCHAR File[4096]={0};
+//  if(pDataObj)
+//  {
+//    FORMATETC fe = {CF_HDROP, NULL, DVASPECT_CONTENT, -1, TYMED_HGLOBAL};
+//    STGMEDIUM stm;
+//    if (SUCCEEDED(pDataObj->GetData(&fe,&stm)))
+//    {
+//      if(DragQueryFile((HDROP)stm.hGlobal,(UINT)-1,NULL,0)==1)
+//        DragQueryFile((HDROP)stm.hGlobal,0,File,4096-1);
+//      ReleaseStgMedium(&stm);
+//    }
+//  }
+//  DBGTrace3("CShellExt::Initialize(%s,%s,%s)",Path,File,FileClass);
+//  if(pDataObj)
+//    PrintDataObj(pDataObj);
 #endif DoDBGTrace
   zero(m_ClickFolderName);
   m_pDeskClicked=FALSE;
@@ -527,13 +527,19 @@ static CRITICAL_SECTION l_SxHkCs;
 STDMETHODIMP CShellExt::Execute(LPSHELLEXECUTEINFO pei)
 {
 #ifdef DoDBGTrace
-  DBGTrace15("SuRun ShellExtHook: siz=%d, msk=%X wnd=%X, verb=%s, file=%s, parms=%s, "
-    L"dir=%s, nShow=%X, inst=%X, idlist=%X, class=%s, hkc=%X, hotkey=%X, hicon=%X, hProc=%X",
-    pei->cbSize,pei->fMask,pei->hwnd,pei->lpVerb,pei->lpFile,pei->lpParameters,
-    pei->lpDirectory,pei->nShow,pei->hInstApp,pei->lpIDList,
-    pei->lpClass,
-    pei->hkeyClass,pei->dwHotKey,pei->hIcon,pei->hProcess);
+//  DBGTrace15("SuRun ShellExtHook: siz=%d, msk=%X wnd=%X, verb=%s, file=%s, parms=%s, "
+//    L"dir=%s, nShow=%X, inst=%X, idlist=%X, class=%s, hkc=%X, hotkey=%X, hicon=%X, hProc=%X",
+//    pei->cbSize,pei->fMask,pei->hwnd,pei->lpVerb,pei->lpFile,pei->lpParameters,
+//    pei->lpDirectory,pei->nShow,pei->hInstApp,pei->lpIDList,
+//    pei->lpClass,
+//    pei->hkeyClass,pei->dwHotKey,pei->hIcon,pei->hProcess);
 #endif DoDBGTrace
+  //Admins don't need the ShellExec Hook!
+  if (l_IsAdmin)
+    return S_FALSE;
+  //Non SuRunners don't need the ShellExec Hook!
+  if ((!l_IsSuRunner))
+    return S_FALSE;
   if (!pei)
   {
     DBGTrace("SuRun ShellExtHook Error: LPSHELLEXECUTEINFO==NULL");
@@ -558,12 +564,6 @@ STDMETHODIMP CShellExt::Execute(LPSHELLEXECUTEINFO pei)
 #endif DoDBGTrace
     return S_FALSE;
   }
-  //Admins don't need the ShellExec Hook!
-  if (l_IsAdmin)
-    return S_FALSE;
-  //Non SuRunners don't need the ShellExec Hook!
-  if ((!l_IsSuRunner))
-    return S_FALSE;
   EnterCriticalSection(&l_SxHkCs);
   static TCHAR tmp[4096];
   zero(tmp);
@@ -579,7 +579,7 @@ STDMETHODIMP CShellExt::Execute(LPSHELLEXECUTEINFO pei)
     &&(_tcsicmp(pei->lpVerb,L"open")!=0)
     &&(_tcsicmp(pei->lpVerb,L"cplopen")!=0))
   {
-    if (_tcsicmp(pei->lpVerb,L"runas")==0)
+    if (GetHandleRunAs && (_tcsicmp(pei->lpVerb,L"runas")==0))
     {
       bRunAs=TRUE;
     }else
@@ -664,7 +664,7 @@ STDMETHODIMP CShellExt::Execute(LPSHELLEXECUTEINFO pei)
           pei->hProcess=OpenProcess(SYNCHRONIZE,false,rpi.dwProcessId);
       }else 
       {
-        pei->hInstApp=(HINSTANCE)SE_ERR_ACCESSDENIED;
+        pei->hInstApp=(HINSTANCE)(bRunAs?34:SE_ERR_ACCESSDENIED);
         //Tell IAT-Hook to not check "tmp" again!
         if (!bRunAs)
           SetRegStr(HKCU,SURUNKEY,L"LastFailedCmd",tmp);
@@ -840,8 +840,8 @@ __declspec(dllexport) void InstallShellExt()
   SetRegStr(HKCR,L"Directory\\Background\\shellex\\ContextMenuHandlers\\SuRun",L"",sGUID);
   SetRegStr(HKCR,L"Folder\\shellex\\ContextMenuHandlers\\SuRun",L"",sGUID);
 #ifdef DoDBGTrace
-  SetRegStr(HKCR,L"*\\shellex\\ContextMenuHandlers\\SuRun",L"",sGUID);
-  SetRegStr(HKCR,L"lnkfile\\shellex\\ContextMenuHandlers\\SuRun",L"",sGUID);
+//  SetRegStr(HKCR,L"*\\shellex\\ContextMenuHandlers\\SuRun",L"",sGUID);
+//  SetRegStr(HKCR,L"lnkfile\\shellex\\ContextMenuHandlers\\SuRun",L"",sGUID);
 #endif DoDBGTrace
   //self Approval
   SetRegStr(HKLM,L"SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\Shell Extensions\\Approved",
@@ -869,8 +869,8 @@ __declspec(dllexport) void RemoveShellExt()
   DelRegKey(HKCR,L"Directory\\Background\\shellex\\ContextMenuHandlers\\SuRun");
   DelRegKey(HKCR,L"Folder\\shellex\\ContextMenuHandlers\\SuRun");
 #ifdef DoDBGTrace
-//  DelRegKey(HKEY_CLASSES_ROOT,L"*\\shellex\\ContextMenuHandlers\\SuRun");
-//  DelRegKey(HKCR,L"lnkfile\\shellex\\ContextMenuHandlers\\SuRun");
+  DelRegKey(HKEY_CLASSES_ROOT,L"*\\shellex\\ContextMenuHandlers\\SuRun");
+  DelRegKey(HKCR,L"lnkfile\\shellex\\ContextMenuHandlers\\SuRun");
 #endif DoDBGTrace
   //ShellExecuteHook
   RegDelVal(HKLM,L"SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\Explorer\\ShellExecuteHooks",sGUID);
